fix container heights to disallow overflow and scrolling

--- a/apps/digi/src/app/game/game.component.scss
+++ b/apps/digi/src/app/game/game.component.scss
@@ -1,31 +1,42 @@
 $max-width: 60rem;
 
-.game-wrapper {
-  display: flex;
-  justify-content: center;
-  height: 90vh;
-  flex-direction: row;
-  align-items: center;
+:host {
+  display: block;
+  width: 100%;
+  height: 100%;
 }
 
-.actions-container {
-  background-color: transparent;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 6rem;
-  padding: 1rem 1.2rem;
-  box-sizing: border-box;
-  text-align: center;
+.game-container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  .game-wrapper {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    align-items: center;
+  }
 
-  button {
+  .actions-container {
+    background-color: transparent;
+    position: relative;
+    bottom: 0;
+    left: 0;
     width: 100%;
-    max-width: $max-width;
-    margin: auto;
-    height: 100%;
-    padding: 0;
-    text-transform: uppercase;
+    height: 6rem;
+    padding: 1rem 1.2rem;
+    box-sizing: border-box;
+    text-align: center;
+
+    button {
+      width: 100%;
+      max-width: $max-width;
+      margin: auto;
+      height: 100%;
+      padding: 0;
+      text-transform: uppercase;
+    }
   }
 }
 
